--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,63 @@
-name: Node CI
-
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+    - main
+  
+  release:
+    types: [created]
 
-    pull_request:
-        branches:
-            - '*'
 
-permissions:
-    contents: read
+name: Deploy to Amazon ECS
 
 jobs:
-    build:
-        strategy:
-            matrix:
-                platform: [ubuntu-latest]
-                node-version: [18.15.0]
-        runs-on: ${{ matrix.platform }}
-        env:
-            PUPPETEER_SKIP_DOWNLOAD: true
-        steps:
-            - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node-version }}
+  deploy:
+    name: Deploy-test
+    runs-on: ubuntu-latest
+    environment: test
+    
+    steps:
 
-            - run: npm i -g yarn
+    - name: Show Working directory
+      run: pwd  
 
-            - run: yarn install --ignore-engines
+    - name: Show Working directory
+      run: ls -la  
 
-            - run: yarn lint
+    - name: Checkout
+      uses: actions/checkout@v2
 
-            - run: yarn build
+    - name: Show Working directory
+      run: ls -ltr 
+
+      - name: install yarn
+      run: npm i -g yarn  
+
+      - name: install ignore-engines
+      run: yarn install --ignore-engines  
+
+      - name: install lint
+      run: yarn lint   
+
+      
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push flowise image to Amazon ECR
+      id: build-flowise-id
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ypoint-images
+        IMAGE_TAG: flowise
+      run: |
+        ls -ltr
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
