--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,6 +1,6 @@
-PORT=3000
-# FLOWISE_USERNAME=user
-# FLOWISE_PASSWORD=1234
+PORT=5422
+ FLOWISE_USERNAME=user
+ FLOWISE_PASSWORD=1234
 # DEBUG=true
 # DATABASE_PATH=/your_database_path/.flowise
 # APIKEY_PATH=/your_api_key_path/.flowise
