--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Show Working directory
-      run: ls -ltr 
-
-      - name: install yarn
-      run: npm i -g yarn  
-
-      - name: install ignore-engines
-      run: yarn install --ignore-engines  
-
-      - name: install lint
-      run: yarn lint   
-
+      run: ls -ltr  
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -50,12 +40,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push flowise image to Amazon ECR
-      id: build-flowise-id
+    - name: Build, tag, and push flowise-test image to Amazon ECR
+      id: build-flowise-test-id
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ypoint-images
-        IMAGE_TAG: flowise
+        IMAGE_TAG: flowise-test
       run: |
         ls -ltr
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
